other-mpol/add-certificates-volume/.chainsaw-test/pod-not-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    inject-certs: disabled
  name: pod02
  namespace: other-certvol-ns
spec:
  containers:
  - name: pod02-01
    image: nginx:latest
    volumeMounts:
    - name: etc-ssl-certs
      mountPath: /etc/ssl/certs
  - name: pod02-02
    image: nginx:latest
    volumeMounts:
    - name: etc-ssl-certs
      mountPath: /etc/ssl/certs
  volumes:
  - name: etc-ssl-certs
    configMap:
      name: ca-pemstore
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod03-01
      image: nginx:latest
      volumeMounts:
      - name: etc-ssl-certs
        mountPath: /etc/ssl/certs
    - name: pod03-02
      image: nginx:latest
      volumeMounts:
      - name: etc-ssl-certs
        mountPath: /etc/ssl/certs
  volumes:
  - name: etc-ssl-certs
    configMap:
      name: ca-pemstore
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  name: pod04
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod04-01
      image: nginx:latest
      volumeMounts:
      - name: etc-ssl-certs
        mountPath: /etc/ssl/certs
    - name: pod04-02
      image: nginx:latest
      volumeMounts:
      - name: etc-ssl-certs
        mountPath: /etc/ssl/certs
  volumes:
  - name: etc-ssl-certs
    configMap:
      name: ca-pemstore
