other-mpol/add-certificates-volume/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    inject-certs: enabled
  name: pod01
  namespace: other-certvol-ns
spec:
  containers:
  - name: pod01-01
    image: nginx:latest
    volumeMounts:
    - name: etc-ssl-certs
      mountPath: /etc/ssl/certs
  - name: pod01-02
    image: nginx:latest
    volumeMounts:
    - name: etc-ssl-certs
      mountPath: /etc/ssl/certs
  volumes:
  - name: etc-ssl-certs
    configMap:
      name: ca-pemstore
