other-mpol/add-certificates-volume/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    inject-certs: enabled
  name: pod01
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod01-01
      image: nginx:latest
    - name: pod01-02
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    inject-certs: disabled
  name: pod02
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod02-01
      image: nginx:latest
    - name: pod02-02
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod03-01
      image: nginx:latest
    - name: pod03-02
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  name: pod04
  namespace: other-certvol-ns
spec:
  automountServiceAccountToken: false
  containers:
    - name: pod04-01
      image: nginx:latest
    - name: pod04-02
      image: nginx:latest
