other-mpol/add-certificates-volume/.chainsaw-test/podcontroller-not-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment02
  namespace: other-certvol-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        inject-certs: disabled
      labels:
        app: busybox
    spec:
      containers:
      - name: bb-01
        image: nginx:latest
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      - name: bb-02
        image: nginx:latest
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      volumes:
      - name: etc-ssl-certs
        configMap:
          name: ca-pemstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment03
  namespace: other-certvol-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        foo: bar
      labels:
        app: busybox
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bb-01
        image: nginx:latest
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      - name: bb-02
        image: nginx:latest
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs
      volumes:
      - name: etc-ssl-certs
        configMap:
          name: ca-pemstore
